--- a/index.html
+++ b/index.html
@@ -11,82 +11,89 @@
         <div class="container">
             <div class="menu">
                 <div class="menu-content">
-    <td valign="top">
-        <p>
-        <h3><a href="http://mmijn.com/homepage.html">M Mijn</a></h3>
-        <input id="color-mode" type="checkbox" name="color-mode">
-        <label for="color-mode">Dark Mode</label>
-        <script>
-            const checkbox = document.getElementById('color-mode');
-            const body = document.body;
+                    <td valign="top">
+                        <p>
+                        <h3><a href="http://mmijn.com/homepage.html">M Mijn</a></h3>
+                        <input id="color-mode" type="checkbox" name="color-mode">
+                        <label for="color-mode">Dark Mode</label>
+                        <script>
+                            const checkbox = document.getElementById('color-mode');
+                            const body = document.body;
 
-            checkbox.addEventListener('change', function () {
-                if (this.checked) {
-                    body.classList.add('dark-mode');
-                } else {
-                    body.classList.remove('dark-mode');
-                }
-            });
-        </script>
-        <div>
-            <h3>projects</h3>
-            <a href="http://mmijn.com/beings-and-doings.html">2024 | beings and doings</a><br>
-            <a href="http://mmijn.com/underbrush.html">2024 | underbrush </a><br>
-            <a href="http://mmijn.com/window-on-departure.html">2024 | a window on departure </a><br>
-            <a href="http://mmijn.com/underbrush.html">2024 | blue summer </a><br>
-            <a href="http://mmijn.com/politics-of-memory.html">2018 | politics of memory</a><br>
-            <a href="http://mmijn.com/masc.html">2016 | masc/mask</a><br>
-            <br>
-        </div>
-        <div>
-            <h3>commissioned</h3>
-            <a href="http://mmijn.com/portraits.html">portraits</a><br>
-            <a href="http://mmijn.com/music.html">music</a><br>
-        </div>
-        <div>
-            <h5>
-                you can reach me by emailing <i>m</i> at this domain.
-                <br>
-                <br>
-                That's <i>m</i>{{{at}}}<i>mmijn.com</i>
-            </h5>
-        </div>
-        </p>
-    </td>
-</div>
+                            checkbox.addEventListener('change', function () {
+                                if (this.checked) {
+                                    body.classList.add('dark-mode');
+                                } else {
+                                    body.classList.remove('dark-mode');
+                                }
+                            });
+                        </script>
+                        <div>
+                            <h3>projects</h3>
+                            <a href="http://mmijn.com/beings-and-doings.html">2024 | beings and doings</a><br>
+                            <a href="http://mmijn.com/underbrush.html">2024 | underbrush </a><br>
+                            <a href="http://mmijn.com/window-on-departure.html">2024 | a window on departure </a><br>
+                            <a href="http://mmijn.com/underbrush.html">2024 | blue summer </a><br>
+                            <a href="http://mmijn.com/politics-of-memory.html">2018 | politics of memory</a><br>
+                            <a href="http://mmijn.com/masc.html">2016 | masc/mask</a><br>
+                            <br>
+                        </div>
+                        <div>
+                            <h3>commissioned</h3>
+                            <a href="http://mmijn.com/portraits.html">portraits</a><br>
+                            <a href="http://mmijn.com/music.html">music</a><br>
+                        </div>
+                        <div>
+                            <h5>
+                                you can reach me by emailing <i>m</i> at this domain.
+                                <br>
+                                <br>
+                                That's <i>m</i>{{{at}}}<i>mmijn.com</i>
+                            </h5>
+                        </div>
+                        </p>
+                    </td>
+                </div>
             </div>
             <div class="gallery">
                 <div class="scroll-container">
-                    <div class="scroll-content"><div class="gallery-item">
-    <h4 style="text-align:left;">homepage</h4>
-    <p style='text-align:left;' class='description'></p>
-</div>
-                                <div class="gallery-item">
-        <img src=".\assets\homepage\homepage_01.jpg" alt="homepage_01.jpg">
-        <p>This is the text for homepage_01.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\homepage\homepage_02.jpg" alt="homepage_02.jpg">
-        <p>This is the text for homepage_02.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\homepage\homepage_03.jpg" alt="homepage_03.jpg">
-        <p>This is the text for homepage_03.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\homepage\homepage_04.jpg" alt="homepage_04.jpg">
-        <p>This is the text for homepage_04.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\homepage\homepage_05.jpg" alt="homepage_05.jpg">
-        <p>This is the text for homepage_05.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\homepage\homepage_06.jpg" alt="homepage_06.jpg">
-        <p>This is the text for homepage_06.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\homepage\homepage_07.jpg" alt="homepage_07.jpg">
-        <p>This is the text for homepage_07.jpg.</p>
-    </div>
+                    <div class="scroll-content">
+                        <div class="gallery-item">
+                            <h4 style="text-align:left;">homepage</h4>
+                            <p style='text-align:left;' class='description'></p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\homepage\homepage_01.jpg" alt="homepage_01.jpg">
+
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\homepage\homepage_02.jpg" alt="homepage_02.jpg">
+
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\homepage\homepage_03.jpg" alt="homepage_03.jpg">
+
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\homepage\homepage_04.jpg" alt="homepage_04.jpg">
+
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\homepage\homepage_05.jpg" alt="homepage_05.jpg">
+
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\homepage\homepage_06.jpg" alt="homepage_06.jpg">
+
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\homepage\homepage_07.jpg" alt="homepage_07.jpg">
+
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
 </body>
 
