--- a/portraits.html
+++ b/portraits.html
@@ -63,40 +63,40 @@
 </div>
                                 <div class="gallery-item">
         <img src=".\assets\portraits\portraits_01.jpg" alt="portraits_01.jpg">
-        <p>This is the text for portraits_01.jpg.</p>
+        <p>Lasso and Billi</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_02.jpg" alt="portraits_02.jpg">
-        <p>This is the text for portraits_02.jpg.</p>
+        <p>Tony</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_03.jpg" alt="portraits_03.jpg">
-        <p>This is the text for portraits_03.jpg.</p>
+        <p>Carla</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_04.jpg" alt="portraits_04.jpg">
-        <p>This is the text for portraits_04.jpg.</p>
+        <p>Haullin Ass Cycles</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_05.jpg" alt="portraits_05.jpg">
-        <p>This is the text for portraits_05.jpg.</p>
+        <p>Felix</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_06.jpg" alt="portraits_06.jpg">
-        <p>This is the text for portraits_06.jpg.</p>
+        <p>Eric</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_07.jpg" alt="portraits_07.jpg">
-        <p>This is the text for portraits_07.jpg.</p>
+        <p>Sharon</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_08.jpg" alt="portraits_08.jpg">
-        <p>This is the text for portraits_08.jpg.</p>
+        <p>Q</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_09.jpg" alt="portraits_09.jpg">
-        <p>This is the text for portraits_09.jpg.</p>
+        <p>Bear</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_10.jpg" alt="portraits_10.jpg">
-        <p>This is the text for portraits_10.jpg.</p>
+        <p>R</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_11.jpg" alt="portraits_11.jpg">
-        <p>This is the text for portraits_11.jpg.</p>
+        <p>Sammy</p>
     </div>    <div class="gallery-item">
         <img src=".\assets\portraits\portraits_12.jpg" alt="portraits_12.jpg">
-        <p>This is the text for portraits_12.jpg.</p>
+        <p>P</p>
     </div>
                         </div>
                     </div>
