--- a/music.html
+++ b/music.html
@@ -11,103 +11,110 @@
         <div class="container">
             <div class="menu">
                 <div class="menu-content">
-    <td valign="top">
-        <p>
-        <h3><a href="http://mmijn.com/homepage.html">M Mijn</a></h3>
-        <input id="color-mode" type="checkbox" name="color-mode">
-        <label for="color-mode">Dark Mode</label>
-        <script>
-            const checkbox = document.getElementById('color-mode');
-            const body = document.body;
+                    <td valign="top">
+                        <p>
+                        <h3><a href="http://mmijn.com/homepage.html">M Mijn</a></h3>
+                        <input id="color-mode" type="checkbox" name="color-mode">
+                        <label for="color-mode">Dark Mode</label>
+                        <script>
+                            const checkbox = document.getElementById('color-mode');
+                            const body = document.body;
 
-            checkbox.addEventListener('change', function () {
-                if (this.checked) {
-                    body.classList.add('dark-mode');
-                } else {
-                    body.classList.remove('dark-mode');
-                }
-            });
-        </script>
-        <div>
-            <h3>projects</h3>
-            <a href="http://mmijn.com/beings-and-doings.html">2024 | beings and doings</a><br>
-            <a href="http://mmijn.com/underbrush.html">2024 | underbrush </a><br>
-            <a href="http://mmijn.com/window-on-departure.html">2024 | a window on departure </a><br>
-            <a href="http://mmijn.com/underbrush.html">2024 | blue summer </a><br>
-            <a href="http://mmijn.com/politics-of-memory.html">2018 | politics of memory</a><br>
-            <a href="http://mmijn.com/masc.html">2016 | masc/mask</a><br>
-            <br>
-        </div>
-        <div>
-            <h3>commissioned</h3>
-            <a href="http://mmijn.com/portraits.html">portraits</a><br>
-            <a href="http://mmijn.com/music.html">music</a><br>
-        </div>
-        <div>
-            <h5>
-                you can reach me by emailing <i>m</i> at this domain.
-                <br>
-                <br>
-                That's <i>m</i>{{{at}}}<i>mmijn.com</i>
-            </h5>
-        </div>
-        </p>
-    </td>
-</div>
+                            checkbox.addEventListener('change', function () {
+                                if (this.checked) {
+                                    body.classList.add('dark-mode');
+                                } else {
+                                    body.classList.remove('dark-mode');
+                                }
+                            });
+                        </script>
+                        <div>
+                            <h3>projects</h3>
+                            <a href="http://mmijn.com/beings-and-doings.html">2024 | beings and doings</a><br>
+                            <a href="http://mmijn.com/underbrush.html">2024 | underbrush </a><br>
+                            <a href="http://mmijn.com/window-on-departure.html">2024 | a window on departure </a><br>
+                            <a href="http://mmijn.com/underbrush.html">2024 | blue summer </a><br>
+                            <a href="http://mmijn.com/politics-of-memory.html">2018 | politics of memory</a><br>
+                            <a href="http://mmijn.com/masc.html">2016 | masc/mask</a><br>
+                            <br>
+                        </div>
+                        <div>
+                            <h3>commissioned</h3>
+                            <a href="http://mmijn.com/portraits.html">portraits</a><br>
+                            <a href="http://mmijn.com/music.html">music</a><br>
+                        </div>
+                        <div>
+                            <h5>
+                                you can reach me by emailing <i>m</i> at this domain.
+                                <br>
+                                <br>
+                                That's <i>m</i>{{{at}}}<i>mmijn.com</i>
+                            </h5>
+                        </div>
+                        </p>
+                    </td>
+                </div>
             </div>
             <div class="gallery">
                 <div class="scroll-container">
-                    <div class="scroll-content"><div class="gallery-item">
-    <h4 style="text-align:left;">music</h4>
-    <p style='text-align:left;' class='description'>Photographs of live music, description here?? does this need a description? IDFK</p>
-</div>
-                                <div class="gallery-item">
-        <img src=".\assets\music\music_01.jpg" alt="music_01.jpg">
-        <p>This is the text for music_01.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_02.jpg" alt="music_02.jpg">
-        <p>This is the text for music_02.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_03.jpg" alt="music_03.jpg">
-        <p>This is the text for music_03.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_04.jpg" alt="music_04.jpg">
-        <p>This is the text for music_04.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_05.jpg" alt="music_05.jpg">
-        <p>This is the text for music_05.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_06.jpg" alt="music_06.jpg">
-        <p>This is the text for music_06.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_07.jpg" alt="music_07.jpg">
-        <p>This is the text for music_07.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_08.jpg" alt="music_08.jpg">
-        <p>This is the text for music_08.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_09.jpg" alt="music_09.jpg">
-        <p>This is the text for music_09.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_10.jpg" alt="music_10.jpg">
-        <p>This is the text for music_10.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_11.jpg" alt="music_11.jpg">
-        <p>This is the text for music_11.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_12.jpg" alt="music_12.jpg">
-        <p>This is the text for music_12.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_28.jpg" alt="music_28.jpg">
-        <p>This is the text for music_28.jpg.</p>
-    </div>    <div class="gallery-item">
-        <img src=".\assets\music\music_29.jpg" alt="music_29.jpg">
-        <p>This is the text for music_29.jpg.</p>
-    </div>
+                    <div class="scroll-content">
+                        <div class="gallery-item">
+                            <h4 style="text-align:left;">music</h4>
+                            <p style='text-align:left;' class='description'>Photographs of live music, description
+                                here?? does this need a description? IDFK</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_01.jpg" alt="music_01.jpg">
+                            <p>Chase Mason of Gatecreeper, 2024</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_02.jpg" alt="music_02.jpg">
+                            <p>Riley Gale of Power Trip, 2017</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_03.jpg" alt="music_03.jpg">
+                            <p>Black Smurf, 2017</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_04.jpg" alt="music_04.jpg">
+                            <p>Full of Hell, 2024</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_05.jpg" alt="music_05.jpg">
+                            <p>Gatecreeper, 2024</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_06.jpg" alt="music_06.jpg">
+                            <p>End It, 2024</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_07.jpg" alt="music_07.jpg">
+                            <p>Angel Du$t, 2024</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_08.jpg" alt="music_08.jpg">
+                            <p>Crowd, 2017</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_09.jpg" alt="music_09.jpg">
+                            <p>Dean Blunt, 2018</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_10.jpg" alt="music_10.jpg">
+                            <p>Lil B, 2018</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_11.jpg" alt="music_11.jpg">
+                            <p>Crowd, 2017</p>
+                        </div>
+                        <div class="gallery-item">
+                            <img src=".\assets\music\music_12.jpg" alt="music_12.jpg">
+                            <p>Psypiritual, 2020</p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
 </body>
 
