--- a/portraits.html
+++ b/portraits.html
@@ -13,7 +13,7 @@
                 <div class="menu-content">
     <td valign="top">
         <p>
-        <h3><a href="http://mmijn.com/homepage.html">M Mijn</a></h3>
+        <h3><a href="http://mmijn.com/index.html">M Mijn</a></h3>
         <input id="color-mode" type="checkbox" name="color-mode">
         <label for="color-mode">Dark Mode</label>
         <script>
