--- a/portraits.html
+++ b/portraits.html
@@ -33,7 +33,7 @@
             <a href="http://mmijn.com/beings-and-doings.html">2024 | beings and doings</a><br>
             <a href="http://mmijn.com/underbrush.html">2024 | underbrush </a><br>
             <a href="http://mmijn.com/window-on-departure.html">2024 | a window on departure </a><br>
-            <a href="http://mmijn.com/underbrush.html">2024 | blue summer </a><br>
+            <a href="http://mmijn.com/blue-summer.html">2024 | blue summer </a><br>
             <a href="http://mmijn.com/politics-of-memory.html">2018 | politics of memory</a><br>
             <br>
         </div>
