--- a/blue-summer.html
+++ b/blue-summer.html
@@ -33,7 +33,7 @@
             <a href="http://mmijn.com/beings-and-doings.html">beings and doings</a><br>
             <a href="http://mmijn.com/underbrush.html">underbrush </a><br>
             <a href="http://mmijn.com/window-on-departure.html">a window on departure </a><br>
-            <a href="http://mmijn.com/underbrush.html">blue summer </a><br>
+            <a href="http://mmijn.com/blue-summer.html">blue summer </a><br>
             <a href="http://mmijn.com/politics-of-memory.html">politics of memory</a><br>
 
             <br>
