--- a/music.html
+++ b/music.html
@@ -61,7 +61,7 @@
                             
                 <div class="gallery-item">
                     <img src=".\assets\music\music_01.jpg" alt="music_01.jpg">
-                    <p></p>
+                    <p>Chase Mason of Gatecreeper</p>
                 </div>
                 
                 <div class="gallery-item">
